--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
         </h1>
         <div class="subheading mb-5">
           237/43/22 - Pham Van Chieu - Phuong 14 - Quan Go Vao - Thanh Pho Ho Chi Minh
-          <a href="mailto:name@email.com">thinh.cao@hotmail.com</a>
+          <br>
+          <p>Email Address:</p>
+          <a href="thinh.cao@hotmail.com">thinh.cao@hotmail.com</a>
         </div>
         <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
         <div class="social-icons">
