--- a/index.html
+++ b/index.html
@@ -63,27 +63,29 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Thinh
+        <h1 class="mb-0 text-warning">Thinh
           <span class="text-primary">Cao Tan</span>
         </h1>
-        <div class="subheading mb-5">
-          237/43/22 - Pham Van Chieu - Phuong 14 - Quan Go Vao - Thanh Pho Ho Chi Minh
+        <div class="mb-5">
+          <b>Address: </b>237/43/22 - Pham Van Chieu - Phuong 14 - Quan Go Vap - Thanh Pho Ho Chi Minh
           <br>
-          <p>Email Address:</p>
-          <a href="thinh.cao@hotmail.com">thinh.cao@hotmail.com</a>
+          <p>
+            <b>Email Address:</b>
+            <a href="thinh.cao@hotmail.com">thinh.cao@hotmail.com</a>
+          </p>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-1">
+          Hello, My name is Thinh. I am a Ruby Developer. Please contact me at:
+        </p>
+        <p>
+          Phone: +84 345 172 173
+        </p>
+
         <div class="social-icons">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/thinh-cao-471710156/" target="_blank">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
-            <i class="fab fa-github"></i>
-          </a>
-          <a href="#">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="#">
+          <a href="https://www.facebook.com/thinhcao95">
             <i class="fab fa-facebook-f"></i>
           </a>
         </div>
@@ -98,48 +100,14 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
             <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <div class="subheading mb-3">NUS Technology</div>
+            <p>I am started at Internship web developer position. I learned a lot about Ruby on Rails framework in 5 weeks and started working in a real project with rails in 3 months</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">April 2018 - Present</span>
           </div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
-          </div>
-        </div>
-
       </div>
 
     </section>
@@ -152,27 +120,15 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
+            <h3 class="mb-0">Ho Chi Minh University of Technology</h3>
             <div class="subheading mb-3">Bachelor of Science</div>
             <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <p>GPA: 6.63</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">August 2013 - May 2019</span>
           </div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
-          </div>
-        </div>
-
       </div>
     </section>
 
