--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Resume - Start Bootstrap Theme</title>
+  <title>Resume - ThinhCT</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +27,6 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Clarence Taylor</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
       </span>
@@ -59,7 +58,7 @@
     </div>
   </nav>
 
-  <div class="container-fluid p-0">
+  <div class="main container-fluid p-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
@@ -78,7 +77,10 @@
           Hello, My name is Thinh. I am a Ruby Developer. Please contact me at:
         </p>
         <p>
-          Phone: +84 345 172 173
+          <b>Phone:</b>
+          <span class="text-primary">
+            +84 345 172 173
+          </span>
         </p>
 
         <div class="social-icons">
@@ -102,7 +104,13 @@
           <div class="resume-content">
             <h3 class="mb-0">Web Developer</h3>
             <div class="subheading mb-3">NUS Technology</div>
-            <p>I am started at Internship web developer position. I learned a lot about Ruby on Rails framework in 5 weeks and started working in a real project with rails in 3 months</p>
+            <p>
+              I am started at Internship web developer position. I learned a lot about Ruby on Rails framework in 5 weeks and started working in a real project with rails in 3 months
+            </p>
+
+            <p>
+              After 4 months, I started working as a developer under the supervision of the technical leader. I have 9 months of work for the japanese customer until now.
+            </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">April 2018 - Present</span>
@@ -150,31 +158,10 @@
             <i class="fab fa-js-square"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-react"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
-          </li>
-          <li class="list-inline-item">
             <i class="fab fa-sass"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-less"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
+            <i class="fab fa-rails"></i>
           </li>
         </ul>
 
@@ -182,16 +169,16 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
+            Responsive Design</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
+            Getting stated with rails</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
+            Deploy app to heroku</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
+            Implement PKCE flow with rails and Keycloak</li>
         </ul>
       </div>
     </section>
@@ -201,13 +188,13 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <p>Apart from being a web developer, I enjoy most of my time being outdoors. I spent a lot of time for reading books, listening to music, studying English and go out with my friends.</p>
+        <p class="mb-0">When forced indoors, I follow a number of movies and television shows or play guitar.</p>
       </div>
     </section>
 
     <hr class="m-0">
-
+<!--
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
         <h2 class="mb-5">Awards &amp; Certifications</h2>
@@ -240,7 +227,7 @@
             Place - James Buchanan High School - Hackathon 2005</li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
   </div>
 
