--- a/index.html
+++ b/index.html
@@ -130,8 +130,9 @@
           <div class="resume-content">
             <h3 class="mb-0">Ho Chi Minh University of Technology</h3>
             <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
+            <div>Computer Science - ABET Accreditation</div>
             <p>GPA: 6.63</p>
+            <p>TOEIC: 600</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2013 - May 2019</span>
@@ -169,16 +170,17 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            Responsive Design</li>
+            3 months internship at Global Cybersoft using ASP.NET MVC5
+          </li>
+          <li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Getting stated with rails</li>
+            4 months internship at NUS Technology using Ruby on Rails
+          </li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Deploy app to heroku</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Implement PKCE flow with rails and Keycloak</li>
+            9 months working at NUS Technology using Ruby on Rails
+          </li>
         </ul>
       </div>
     </section>
