--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </p>
 
             <p>
-              After 4 months, I started working as a developer under the supervision of the technical leader. I have 9 months of work for the japanese customer until now.
+              After 4 months, I started working as a developer under the supervision of the senior software engineer. I have 9 months of work for the japanese customer until now.
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -129,10 +129,13 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Ho Chi Minh University of Technology</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - ABET Accreditation</div>
-            <p>GPA: 6.63</p>
-            <p>TOEIC: 600</p>
+            <div class="subheading mb-3">Software Engineer</div>
+            <div>
+              Computer Science - ABET Accreditation
+              <p class="mb-0">GPA: 6.63</p>
+              <p>TOEIC: 600</p>
+            </div>
+
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2013 - May 2019</span>
