--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
         <ul class="list-inline dev-icons">
           <li class="list-inline-item">
+            <i class="fab fa-github-square"></i>
+          </li>
+          <li class="list-inline-item">
             <i class="fab fa-html5"></i>
           </li>
           <li class="list-inline-item">
@@ -163,9 +166,6 @@
           </li>
           <li class="list-inline-item">
             <i class="fab fa-sass"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-rails"></i>
           </li>
         </ul>
 
