--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Ho Chi Minh University of Technology</h3>
-            <div class="subheading mb-3">BACHELOR OF COMPUTER SCIENCE</div>
+            <div class="subheading mb-3">Bachelor of Computer Science</div>
             <div>
               <p class="mb-0">GPA: 6.63</p>
               <p>TOEIC: 600</p>
