--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body id="page-top">
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
@@ -162,13 +162,16 @@
             <i class="fab fa-css3-alt"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
+            <i class="icon-jquery"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-sass"></i>
           </li>
           <li class="list-inline-item">
-            <i class="icon-ruby-on-rails"></i>
+            <i class="icon-ruby-on-rails-alt"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="icon-postgres"></i>
           </li>
         </ul>
 
