--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <h3 class="mb-0">Web Developer</h3>
             <div class="subheading mb-3">NUS Technology</div>
             <p>
-              I am started at Internship web developer position. I learned a lot about Ruby on Rails framework in 5 weeks and started working in a real project with rails in 3 months
+              I started at NUS Technology as an internship web developer. I learned a lot about Ruby on Rails framework in 5 weeks before joining into a project with rails in 3 months
             </p>
 
             <p>
