--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
+            <h3 class="mb-0">Fullstack Developer</h3>
             <div class="subheading mb-3">NUS Technology</div>
             <p>
               I started at NUS Technology as an internship web developer. I learned a lot about Ruby on Rails framework in 5 weeks before joining into a project with rails in 3 months
@@ -112,6 +112,13 @@
             <p>
               After 4 months, I started working as a developer under the supervision of the senior software engineer. I have 9 months of work for the japanese customer until now.
             </p>
+
+            <h3>Projects</h3>
+            <ul>
+              <li>
+                <p>community.r.design</p>
+              </li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">April 2018 - Present</span>
