--- a/index.html
+++ b/index.html
@@ -105,18 +105,18 @@
           <div class="resume-content">
             <h3 class="mb-0">Fullstack Developer</h3>
             <div class="subheading mb-3">NUS Technology</div>
-            <p>
-              I started at NUS Technology as an internship web developer. I learned a lot about Ruby on Rails framework in 5 weeks before joining into a project with rails in 3 months
-            </p>
 
             <p>
-              After 4 months, I started working as a developer under the supervision of the senior software engineer. I have 9 months of work for the japanese customer until now.
+              I started working as a developer under the supervision of the senior software engineer about 10 months for customer from Japan and Hong Kong until now.
             </p>
 
             <h3>Projects</h3>
             <ul>
               <li>
                 <p>community.r.design</p>
+              </li>
+              <li>
+                An private project.
               </li>
             </ul>
           </div>
@@ -186,16 +186,7 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            3 months internship at Global Cybersoft using ASP.NET MVC5
-          </li>
-          <li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            4 months internship at NUS Technology using Ruby on Rails
-          </li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            9 months working at NUS Technology using Ruby on Rails
+            10 months working at NUS Technology using Ruby on Rails
           </li>
         </ul>
       </div>
