--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="subheading mb-3">NUS Technology</div>
 
             <p>
-              I started working as a developer under the supervision of the senior software engineer about 10 months for customer from Japan and Hong Kong until now.
+              I started working as a developer under the supervision of the senior software engineer about 10 months for customers from Japan and Hong Kong until now.
             </p>
 
             <h3>Projects</h3>
