--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
   <link rel="stylesheet" type="text/css" href="scss/custom.scss">
 
   <style type="text/css">
-    #experience {
-      background-image: url('img/office_desk_487477.jpg');
-      background-size: cover;
-    }
-
     #about {
       background-image: url('img/ubuntu-dark.jpg');
       background-size: cover;
+    }
+
+    #experience {
+      background-image: url('img/office_desk_487477.jpg');
+      background-size: cover;
+      background: transparent\9;
     }
 
     #education {
