--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="subheading mb-3">NUS Technology</div>
 
             <p>
-              I started working as a developer under the supervision of the senior software engineer about 10 months for customers from Japan and Hong Kong until now.
+              I started working as a developer under the supervision of the senior software engineer about 11 months for customers from Japan and Hong Kong until now.
             </p>
             <ul>
               <li>Write APIs for another apps</li>
@@ -163,7 +163,7 @@
           </div>
           <div class="resume-date text-md-right">
             <span class="text-warning">
-              <b>April 2018 - Present</b>
+              <b>October 2018 - Present</b>
             </span>
           </div>
         </div>
@@ -230,7 +230,11 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            10 months working at NUS Technology using Ruby on Rails
+            10 months working using Ruby on Rails
+          </li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            1 month working as a front-end developer
           </li>
         </ul>
       </div>
