--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
           <br>
           <p>
             <b>Email Address:</b>
-            <a href="thinh.cao@hotmail.com">thinh.cao@hotmail.com</a>
+            <span class="text-primary">
+              thinh.cao@hotmail.com
+            </span>
           </p>
         </div>
         <p class="lead mb-1">
