--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            10 months working using Ruby on Rails
+            10 months working as a full-stack developer using Ruby on Rails
           </li>
           <li>
             <i class="fa-li fa fa-check"></i>
