Add sunset background image

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <style type="text/css">
     #about {
-      background-image: url('img/ubuntu-dark.jpg');
+      background-image: url('img/sunset.jpg');
       background-size: cover;
     }
 
