Remove redundant image

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     }
 
     #interests {
-      background-image: url('img/plume.png');
+      background-image: url('img/ubuntu-dark.jpg');
       background-size: cover;
     }
   </style>
