Update email and phone color

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <br>
           <p>
             <b>Email Address:</b>
-            <span class="text-primary">
+            <span class="text-warning">
               thinh.cao@hotmail.com
             </span>
           </p>
@@ -112,7 +112,7 @@
         </p>
         <p>
           <b>Phone:</b>
-          <span class="text-primary">
+          <span class="text-warning">
             +84 345 172 173
           </span>
         </p>
