--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <!-- Experience -->
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
-        <h2 class="mb-5 text-primary">Experience</h2>
+        <h2 class="mb-5 text-warning">Experience</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
@@ -176,7 +176,7 @@
     <!-- Education -->
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
-        <h2 class="mb-5 text-primary">Education</h2>
+        <h2 class="mb-5 text-warning">Education</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
@@ -201,9 +201,11 @@
     <!-- Skills -->
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
-        <h2 class="mb-5 text-primary">Skills</h2>
+        <h2 class="mb-5 text-warning">Skills</h2>
 
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+        <div class="subheading mb-3 text-primary">
+          <b>Programming Languages &amp; Tools</b>
+        </div>
         <ul class="list-inline dev-icons">
           <li class="list-inline-item">
             <i class="fab fa-github-square"></i>
@@ -246,7 +248,7 @@
     <!-- Interests -->
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
-        <h2 class="mb-5 text-primary">Interests</h2>
+        <h2 class="mb-5 text-warning">Interests</h2>
         <p>Apart from being a web developer, I enjoy most of my time being outdoors. I spent a lot of time for reading books, listening to music, studying English and go out with my friends.</p>
         <p class="mb-0">When forced indoors, I follow a number of movies and television shows or play guitar.</p>
       </div>
