--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
               <li>Use Phraseapp for work with localization team</li>
               <li>Connect and manage database with PostgreSQL Admin and Heroku</li>
               <li>Deploy apps using Heroku</li>
+              <li>Teamwork and independent work</li>
             </ul>
 
             <h3 class="text-primary">Projects</h3>
