--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
           <span class="text-primary">Cao Tan</span>
         </h1>
         <div class="mb-5">
-          <b>Address: </b>237/43/22 - Pham Van Chieu - Phuong 14 - Quan Go Vap - Thanh Pho Ho Chi Minh
-          <br>
+          <p class="mb-0"><b>Date of birth: </b>01/31/1995</p>
+          <p class="mb-0"><b>Address: </b>237/43/22 - Pham Van Chieu - Phuong 14 - Quan Go Vap - Thanh Pho Ho Chi Minh</p>
           <p>
             <b>Email Address:</b>
             <span class="text-warning">
@@ -160,7 +160,7 @@
                 <p>community.r.design</p>
               </li>
               <li>
-                An private project.
+                A private project.
               </li>
             </ul>
           </div>
