Update workflow bold

--- a/index.html
+++ b/index.html
@@ -231,7 +231,9 @@
           </li>
         </ul>
 
-        <div class="subheading mb-3">Workflow</div>
+        <div class="subheading mb-3">
+          <b>Workflow</b>
+        </div>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
