--- a/index.html
+++ b/index.html
@@ -108,7 +108,10 @@
           </p>
         </div>
         <p class="lead mb-1">
-          Hello, My name is Thinh. I am a Ruby Developer. Please contact me at:
+          Hello, My name is Thinh. As a Ruby Developer, I have experience in web-development at both front-end and back-end along with foreigner customer form Japan and Hong Kong. I'm able to write clean, readable and maintainable Ruby code and also can work independently or in a team as well.
+        </p>
+        <p class="lead mb-2 mt-2">
+          Please contact me via:
         </p>
         <p>
           <b>Email Address:</b>
