--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
               <li>Implement PKCE flow for SSO using Auth0</li>
               <li>Design APIs using Ruby on rails</li>
               <li>Data visualization using Highcharts.js</li>
-              <li>Use Phraseapp for work with localization team</li>
-              <li>Connect and manage database with PostgreSQL Admin and Heroku</li>
-              <li>Deploy apps using Heroku</li>
+              <li>Use Phraseapp for working with localization team</li>
+              <li>Connect and manage database using PostgreSQL Admin and Heroku</li>
+              <li>Deploy apps by Heroku</li>
               <li>Teamwork and independent work</li>
             </ul>
 
