--- a/index.html
+++ b/index.html
@@ -142,10 +142,6 @@
           <div class="resume-content">
             <h3 class="mb-0 text-primary">Fullstack Developer</h3>
             <div class="subheading mb-3">NUS Technology</div>
-
-            <p>
-              I started working as a developer under the supervision of the senior software engineer about 11 months for customers from Japan and Hong Kong until now.
-            </p>
             <ul>
               <li>Write APIs for another apps</li>
               <li>Implement PKCE flow for SSO using Auth0</li>
@@ -155,6 +151,7 @@
               <li>Connect and manage database using PostgreSQL Admin and Heroku</li>
               <li>Deploy apps by Heroku</li>
               <li>Teamwork and independent work</li>
+              <li>Experience with some ruby gems such as Coffeescript, Sidekiq, Rspec, etc.</li>
             </ul>
 
             <h3 class="text-primary">Projects</h3>
@@ -240,7 +237,10 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            11 months working as a full-stack developer using Ruby on Rails
+            Working as a full-stack developer using Ruby on Rails
+            <span class="text-warning">
+              from 10/2018 until now
+            </span>
           </li>
         </ul>
       </div>
