Updatee project experience

--- a/index.html
+++ b/index.html
@@ -157,10 +157,14 @@
             <h3 class="text-primary">Projects</h3>
             <ul>
               <li>
-                <p>community.r.design</p>
+                <p class="h5 text-warning">community.r.design</p>
+                <p>I worked as the main developer, used JIRA to receive, clarify tasks every day, and sometimes discuss with customers via Slack chat.</p>
+                <p>On the back-end side, there are some libraries that I practiced in the project such as Capybara, Carrierwave, Coffee Script, Slim Rails, Sass Rails, Sidekiq, Kaminari, Rspec Rails, Bullet, and lots of others.</p>
+                <p>On the front-end side, I use Slim Rails for simple pages and Vuejs for more reactive pages. The Vue state is managed by Vuex, Vue router, Axios, etc.</p>
               </li>
               <li>
-                A private project.
+                <p class="h5 text-warning">A private project.</p>
+                <p>I joined a team about 7 members from Hong Kong, we get tasks from the team leader via JIRA, clarify, and start implementing them. We also do peer review code and support each other if we have issues.</p>
               </li>
             </ul>
           </div>
