--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               <li>Experience with some ruby gems such as Coffeescript, Sidekiq, Rspec, etc.</li>
             </ul>
 
-            <h3 class="text-primary">Projects</h3>
+            <h3 class="text-warning">Projects</h3>
             <ul>
               <li>
                 <p class="h5 text-warning">community.r.design</p>
@@ -170,7 +170,19 @@
           </div>
           <div class="resume-date text-md-right">
             <span class="text-warning">
-              <b>October 2018 - Present</b>
+              <b>October 2018 - September 2020</b>
+            </span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0 text-primary">Middle Software Engineer (Backend)</h3>
+            <div class="subheading mb-3">MONEY FORWARD VIETNAM CO.,LTD</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-warning">
+              <b>September 2020 - Present</b>
             </span>
           </div>
         </div>
